<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.DetailsActivity">

    <LinearLayout
        android:id="@+id/activity_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_small"
            android:layout_marginEnd="@dimen/details_indent"
            android:layout_marginStart="@dimen/details_indent" />

        <Button
            android:id="@+id/select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_indent"
            android:text="@string/select_category" />

        <EditText
            android:id="@+id/product_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_indent"
            android:hint="@string/hint_name"
            android:inputType="textCapWords" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_indent">

            <EditText
                android:id="@+id/product_price_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/unit_currency"
                android:textStyle="italic" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/product_stock_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/details_indent"
                android:hint="@string/hint_in_stock"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/unit_items"
                android:textStyle="italic" />

        </RelativeLayout>

        <EditText
            android:id="@+id/product_supplier_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_indent"
            android:hint="@string/hint_provider_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/product_supplier_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_small"
            android:layout_marginStart="@dimen/details_indent"
            android:hint="@string/hint_provider_email"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/modify_stock_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_stock"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/modify_stock_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_small"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/modify_stock_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_small"
                android:layout_marginStart="@dimen/details_indent"
                android:hint="@string/hint_count" />

            <Button
                android:id="@+id/modify_stock_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_increase" />

            <Button
                android:id="@+id/modify_stock_del_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_decrease" />

        </LinearLayout>

        <TextView
            android:id="@+id/supplier_support_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_product"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/supplier_support_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_small"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/order_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_small"
                android:layout_marginStart="@dimen/details_indent"
                android:hint="@string/hint_count"
                android:inputType="number" />

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send_order" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_product"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/distance_small"
                android:layout_weight="1"
                android:text="@string/button_save_product" />

            <Button
                android:id="@+id/remove_product"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/distance_small"
                android:layout_weight="1"
                android:text="@string/button_remove_product" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
