<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_width"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/distance_small" />

    <LinearLayout
        android:id="@+id/list_item_linear_layout"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_placeholder"
            android:textSize="@dimen/text_size_name"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_very_small"
                android:text="@string/product_price_placeholder"
                android:textSize="@dimen/text_size_details"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_small"
                android:text="@string/currency_sign_separator"
                android:textSize="@dimen/text_size_details" />

            <TextView
                android:id="@+id/stock_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_very_small"
                android:text="@string/product_stock_placeholder"
                android:textSize="@dimen/text_size_details"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_stock"
                android:textSize="@dimen/text_size_details" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="@dimen/button_sale_width"
        android:layout_height="wrap_content"
        android:text="@string/button_sale" />

</LinearLayout>